[tool.poetry]
name = "dx_cwl_runner"
version = "0.1.0"
description = "DNAnexus implementation of cwl-runner interface"
authors = [
    "mhrvol <mhrvol-cf@dnanexus.com>",
    "jdidion <jdidion@dnanexus.com>"
]

[tool.poetry.dependencies]
python = "^3.6"
cwltool = "^3.1.20220202110738"
cwl-upgrader= "^1.2"

[tool.poetry.dev-dependencies]
dxpy = "^0.314.0"

[tool.poetry.scripts]
dx-cwl-runner = 'dx_cwl_runner.cwl_runner:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
